Fix: some responsiveness, z-index for coffee button

--- a/src/styles/Nav.module.css
+++ b/src/styles/Nav.module.css
@@ -116,7 +116,7 @@
     width: 100%;
     height: 100vh;
     outline: currentcolor none 0px;
-    z-index: 999999;
+    z-index: 9999999;
     transition: all 0.3s ease-in-out 0s;
     transform: translateX(0px);
     visibility: visible;
@@ -160,7 +160,7 @@
     top: 0px;
     left: 0px;
     background: rgba(0, 0, 0, 0.3) none repeat scroll 0% 0%;
-    z-index: 9999;
+    z-index: 999999;
     transition: all 0.3s ease-in-out 0s;
     display: block;
   }
@@ -171,7 +171,7 @@
     height: 35px;
     cursor: pointer;
     padding-right: 24px;
-    z-index: 9999999;
+    z-index: 99999999;
   }
 
   .bar1,
