--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,6 +25,10 @@ a {
   box-sizing: border-box;
 }
 
+/* #bmc-wbtn {
+  opacity: 80%;
+} */
+
 img {
   max-width: 100%;
   display: block;
@@ -90,6 +94,7 @@ p {
   text-align: center;
   gap: 1rem;
   margin-top: 24px;
+  z-index: 99999;
 }
 
 .social a {
